python api bind to lzy