@@ -2,6 +2,7 @@ package ru.yandex.cloud.ml.platform.lzy.servant;
 
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
+import ru.yandex.cloud.ml.platform.lzy.model.JsonUtils;
 import ru.yandex.cloud.ml.platform.lzy.model.Slot;
 import ru.yandex.cloud.ml.platform.lzy.model.Zygote;
 import ru.yandex.cloud.ml.platform.lzy.model.gRPCConverter;
@@ -9,6 +10,7 @@ import ru.yandex.cloud.ml.platform.lzy.model.graph.AtomicZygote;
 import ru.yandex.cloud.ml.platform.lzy.model.slots.TextLinesInSlot;
 import ru.yandex.cloud.ml.platform.lzy.model.slots.TextLinesOutSlot;
 import ru.yandex.cloud.ml.platform.lzy.servant.fs.LzyInputSlot;
+import ru.yandex.cloud.ml.platform.lzy.servant.fs.LzyOutputSlot;
 import ru.yandex.cloud.ml.platform.lzy.servant.fs.LzySlot;
 import ru.yandex.cloud.ml.platform.lzy.servant.slots.InFileSlot;
 import ru.yandex.cloud.ml.platform.lzy.servant.slots.LineReaderSlot;
@@ -64,6 +66,7 @@ public class LzyExecution {
     }
 
     public LzySlot configureSlot(Slot spec, String binding) {
+        LOG.info("LzyExecution::configureSlot " + spec.name() + " binding: " + binding);
         final Lock lock = lockManager.getOrCreate(spec.name());
         lock.lock();
         try {
@@ -161,7 +164,7 @@ public class LzyExecution {
                 .setStarted(Servant.ExecutionStarted.newBuilder().build())
                 .build()
             );
-            exec = Runtime.getRuntime().exec(zygote.fuze() + " " + arguments);
+            exec = Runtime.getRuntime().exec(new String[]{"bash", "-c", zygote.fuze() + " " + arguments});
 
             stdinSlot.setStream(new OutputStreamWriter(exec.getOutputStream(), StandardCharsets.UTF_8));
             stdoutSlot.setStream(new LineNumberReader(new InputStreamReader(
@@ -174,6 +177,12 @@ public class LzyExecution {
             )));
             final int rc = exec.waitFor();
             Set.copyOf(slots.values()).stream().filter(s -> s instanceof LzyInputSlot).forEach(LzySlot::close);
+            if (rc != 0) {
+                Set.copyOf(slots.values()).stream()
+                    .filter(s -> s instanceof OutFileSlot)
+                    .map(s -> (OutFileSlot)s)
+                    .forEach(OutFileSlot::flush);
+            }
             synchronized (slots) {
                 LOG.info("Slots: " + Arrays.toString(slots().map(LzySlot::name).toArray()));
                 while (!slots.isEmpty()) {
